# TSOD

./: README.md
client/: Cargo.toml  build.rs
client/.cargo/: config.toml
client/assets/: game_db.json  third_party_licenses.tsv
client/src/: activity.rs  config.rs  identity.rs  main.rs  media_audio_loopback.rs  media_capture.rs  media_codec.rs  media_pipeline.rs  settings_io.rs  updater.rs
client/src/app/: state.rs
client/src/audio/: capture.rs  jitter.rs  mod.rs  opus.rs  playout.rs  resample.rs
client/src/audio/dsp/: aec.rs  agc.rs  mod.rs  rnnoise.rs  vad.rs
client/src/audio/windows/: mmdevice.rs  mod.rs  wasapi_capture.rs  wasapi_common.rs  wasapi_playout.rs
client/src/net/: control.rs  dispatcher.rs  egress.rs  frame.rs  mod.rs  overwrite_queue.rs  quic.rs  video_datagram.rs  video_decode.rs  video_frame.rs  video_metrics.rs  video_policy.rs  video_transport.rs  voice_datagram.rs  vpx_codec.rs
client/src/net/video_convert/: bgra_to_i420.rs  bgra_to_nv12.rs  mod.rs
client/src/net/video_decode/: av1.rs  mod.rs  vp9.rs
client/src/net/video_decode/av1/: av1_dav1d.rs  av1_mf.rs  av1_vaapi.rs
client/src/net/video_decode/vp9/: vaapi_vp9_dec.rs  vp9_libvpx.rs  vp9_mf.rs  vp9_vaapi.rs
client/src/net/video_encode/: av1.rs  hw_linux.rs  hw_windows.rs  mod.rs  vp9.rs
client/src/net/video_encode/av1/: av1_mf.rs  av1_svt.rs  av1_vaapi.rs  caps.rs  nvenc.rs  rav1e.rs  svt.rs
client/src/net/video_encode/vp9/: vaapi_vp9_enc.rs  vp9_libvpx.rs  vp9_mf.rs  vp9_vaapi.rs
client/src/proto/: mod.rs
client/src/screen_share/: audio.rs  capture.rs  config.rs  fsm.rs  mod.rs  policy.rs  portal.rs  preflight.rs  runtime_probe.rs  session.rs
client/src/screen_share/audio/: mod.rs  pipewire_monitor.rs  wasapi_loopback.rs
client/src/screen_share/capture/: dxgi.rs  mod.rs  pipewire.rs  scrap_fallback.rs  wgc.rs  x11.rs
client/src/screen_share/policy/: bitrate.rs  layer_selection.rs  mod.rs  recovery.rs
client/src/screen_share/runtime_probe/: nvidia.rs  vaapi.rs
client/src/ui/: input.rs  markdown.rs  mod.rs  model.rs  render.rs  sfx.rs  theme.rs  tui.rs
client/src/ui/panels/: chat.rs  members.rs  mod.rs  permissions_center.rs  profile_edit.rs  profile_popup.rs  server_tree.rs  settings.rs  streaming.rs  telemetry.rs  user_panel.rs
client/src/ui/widgets/: cosmic_chat_composer.rs  mod.rs
docs/: SCREENSHARE_PLAN.md  VIDEO_STREAMING_COMPLETION_PLAN.md  VIDEO_STREAMING_GAP_ANALYSIS version 1.md  VIDEO_STREAMING_GAP_ANALYSIS.md  authoritative-state-sync.md  auto-update.md  dev-auth-identity.md  setup-guide-updated-v2.md  setup-guide-updated.md  setup-guide.md  tsod-user-profiles-design.md  tsod_video_streaming_implementation_handoff.md  update-server-guide.md  video_streaming_gap_report.md  voice-audio-quality-recommendations.md
proto/: audit.proto  auth.proto  buf.yaml  caps.proto  channel.proto  chat.proto  common.proto  control.proto  dm.proto  encryption.proto  media.proto  moderation.proto  permissions.proto  poke.proto  presence.proto  proto_files.rs  screenshare.proto  spatial.proto  telemetry.proto  upload.proto  user.proto  videocall.proto  whisper.proto
server/control/: Cargo.toml  cargo.toml
server/control/migrations/: 0001_init.sql  0002_indexes.sql  0003_chat.sql  0004_outbox_claim.sql  0005_audit_context_json.sql  0006_audit_context_compat.sql  0007_outbox_payload_json_compat.sql  0008_members_and_outbox_uuid_compat.sql  0009_channel_parent_cascade.sql  0010_attachments.sql  0011_auth_devices.sql  0012_attachments_security.sql  0013_attachment_media_metadata.sql  0013_rbac_defaults.sql  0014_discord_teamspeak_hybrid_perms.sql  0015_permissions_gui_minimal_model.sql  0016_permissions_bootstrap_constraints.sql  0017_fix_role_caps_primary_key.sql  0018_channel_info_codec_fields.sql  0022_user_profiles.sql  0022_voice_membership_single_channel.sql  0023_profile_asset_uploads.sql  0024_custom_status_expires.sql
server/control/src/: audit.rs  channels.rs  config.rs  db.rs  errors.rs  events.rs  ids.rs  lib.rs  membership.rs  model.rs  outbox.rs  perms.rs  repo.rs  service.rs  store.rs
server/control/tests/: moderation_auth.rs
server/gateway/: Cargo.toml  build.rs  main.rs
server/gateway/src/: auth.rs  bootstrap.rs  config.rs  egress.rs  frame.rs  gateway.rs  main.rs  media.rs  metrics_adapter.rs  orphan_cleaner.rs  outbox_dispatch.rs  overwrite_queue.rs  prune.rs  screenshare.rs  screenshare_policy.rs  state.rs  tls.rs  upload_http.rs
server/gateway/src/proto/: mod.rs
server/media/: Cargo.toml  datagram_send_policy.rs  layer_filter.rs  stream_forwarder.rs  voice_forwarder.rs
server/media/src/: lib.rs
server/metrics/: Cargo.toml
server/metrics/src/: config.rs  control.rs  gateway.rs  http.rs  labels.rs  lib.rs  stream.rs  voice.rs
shared/route-hash/: Cargo.toml
shared/route-hash/src/: lib.rs
shared/voice/: Cargo.toml
shared/voice/src/: lib.rs
tools/: Cargo.toml
tools/netem/: Cargo.toml
tools/netem/src/: main.rs  tc.rs  validate.rs
tools/soak/: Cargo.toml  build.rs
tools/soak/src/: main.rs  quic_client.rs  stats.rs  tls.rs
