[package]
name = "vp-client"
version = "0.1.0"
edition = "2021"

[features]
default = ["dsp", "aec"]
dsp = []
aec = ["dsp", "dep:sonora-aec3"]
screen-share = []
video-call = []
e2ee = []

[dependencies]
async-trait = "0.1"
anyhow = "1.0"
bytes = "1.6"
clap = { version = "4.5", features = ["derive", "env"] }
prost = "0.13"
rand = "0.8"
tokio = { version = "1.37", features = ["rt-multi-thread", "macros", "time", "signal", "io-util", "sync", "fs"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
uuid = { version = "1.10", features = ["v4"] }
vp-route-hash = { path = "../shared/route-hash" }

# QUIC / TLS
quinn = "0.11"
rustls = { version = "0.23", default-features = false, features = ["std", "ring"] }
rustls-pemfile = "2"
ring = "0.17"

# Audio (cross-platform)
opus = "0.3"
ringbuf = "0.4"

# DSP
nnnoiseless = "0.5"      # Pure Rust RNNoise (noise suppression + VAD)
sonora-aec3 = { version = "0.1", optional = true }

# GUI
eframe = "0.29"
egui = "0.29"
egui_extras = { version = "0.29", features = ["image"] }
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "gif"] }

# Utilities
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
parking_lot = "0.12"
crossbeam-channel = "0.5"
open = "5"                # open URLs in browser
dirs = "5"
rfd = "0.15"

[target.'cfg(target_os = "linux")'.dependencies]
pipewire = "0.9"

[target.'cfg(not(target_os = "linux"))'.dependencies]
cpal = "0.15"

[build-dependencies]
prost-build = "0.13"
