[package]
name = "vp-client"
version = "0.1.0"
edition = "2021"

[features]
default = ["dsp", "aec"]
dsp = []
aec = ["dsp", "dep:sonora-aec3"]
screen-share = []
video-call = []
e2ee = []

[dependencies]
async-trait = "0.1.89"
anyhow = "1.0.102"
bytes = "1.11.1"
clap = { version = "4.5.60", features = ["derive", "env"] }
prost = "0.14.3"
rand = "0.10"
tokio = { version = "1.49", features = ["rt-multi-thread", "macros", "time", "signal", "io-util", "sync", "fs"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
uuid = { version = "1.21", features = ["v4"] }
vp-route-hash = { path = "../shared/route-hash" }

# QUIC / TLS
quinn = "0.11.9"
rustls = { version = "0.23.37", default-features = false, features = ["std", "ring"] }
rustls-pemfile = "2.2.0"
ring = "0.17.14"

# Audio (cross-platform)
opus = "0.3.1"
ringbuf = "0.4.8"

# DSP
nnnoiseless = "0.5.2"      # Pure Rust RNNoise (noise suppression + VAD)
sonora-aec3 = { version = "0.1", optional = true }

# GUI
eframe = "0.33.3"
egui = "0.33.3"
egui_extras = { version = "0.33.3", features = ["image"] }
image = { version = "0.25.9", default-features = false, features = ["png", "jpeg", "gif"] }

# Utilities
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
chrono = { version = "0.4.44", features = ["serde"] }
parking_lot = "0.12.5"
crossbeam-channel = "0.5.15"
open = "5.3.3"                # open URLs in browser
dirs = "6"
rfd = "0.17.2"

[target.'cfg(target_os = "linux")'.dependencies]
pipewire = { version = "0.9.2", features = ["v0_3_44"] }
cpal = "0.17.3"

[target.'cfg(not(target_os = "linux"))'.dependencies]
cpal = "0.17.3"

[build-dependencies]
prost-build = "0.14.3"

[target.'cfg(target_os = "windows")'.dependencies]
wasapi = "0.22"
windows = { version = "0.62.2", features = [
  "Win32_System_Com",
  "Win32_System_Com_StructuredStorage",
  "Win32_Media_Audio",
  "Win32_Devices_FunctionDiscovery",
  "Win32_UI_Shell_PropertiesSystem",
] }

