[package]
name = "tsod-client"
version = "0.1.4"
edition = "2021"

[features]
default = ["dsp", "aec"]
dsp = []
aec = ["dsp", "dep:sonora-aec3"]
screen-share = ["video-vp9", "video-av1-decode"]
video-call = ["video-vp9", "video-av1-decode"]
video-vp9 = []
video-av1-decode = []
video-av1-software = []
screen-share-hw-windows = []
screen-share-hw-linux = []
capture-dxgi = []
capture-pipewire = []
capture-x11 = []
system-audio-windows = []
system-audio-pipewire = []
e2ee = []
dev-synthetic-stream = []

[dependencies]
async-trait = "0.1.89"
anyhow = "1.0.102"
bytes = "1.11.1"
clap = { version = "4.5.60", features = ["derive", "env"] }
prost = "0.14.3"
rand = "0.10"
tokio = { version = "1.49", features = ["rt-multi-thread", "macros", "time", "signal", "io-util", "sync", "fs"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
uuid = { version = "1.21", features = ["v4"] }
vp-route-hash = { path = "../shared/route-hash" }
vp-voice = { path = "../shared/voice" }
axoupdater = "0.10.0"

# QUIC / TLS
quinn = "0.11.9"
rustls = { version = "0.23.37", default-features = false, features = ["std", "ring"] }
rustls-pemfile = "2.2.0"
ring = "0.17.14"

# Audio (cross-platform)
opus = "0.3.1"
ringbuf = "0.4.8"
rubato = "=1.0.1"
audioadapter-buffers = "2.0.0"

# DSP
nnnoiseless = "0.5.2"      # Pure Rust RNNoise (noise suppression + VAD)
sonora-aec3 = { version = "0.1", optional = true }

# GUI
eframe = "0.33.3"
egui = "0.33.3"
egui_extras = { version = "0.33.3", features = ["image"] }
image = { version = "0.25.9", default-features = false, features = ["png", "jpeg", "gif", "webp", "avif"] }
cosmic-text = "0.18"
rav1e = { version = "0.8.1", default-features = false, features = ["threading"] }

# Utilities
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
semver = "1.0.27"
chrono = { version = "0.4.44", features = ["serde"] }
parking_lot = "0.12.5"
crossbeam-channel = "0.5.15"
open = "5.3.3"                # open URLs in browser
dirs = "6"
rfd = "0.17.2"
url = "2.5.7"
scrap = "0.5.0"
libloading = "0.8.9"

[target.'cfg(target_os = "linux")'.dependencies]
pipewire = { version = "0.9.2", features = ["v0_3_44"] }
cpal = "0.17.3"
zbus = { version = "4", features = ["blocking"] }

[target.'cfg(not(target_os = "linux"))'.dependencies]
cpal = "0.17.3"

[build-dependencies]
prost-build = "0.14.3"
chrono = "0.4.44"
pkg-config = "0.3"

[target.'cfg(target_os = "windows")'.dependencies]
reqwest = { version = "0.12.24", default-features = false, features = ["json", "rustls-tls"] }
wasapi = "0.22"
windows = { version = "0.62.2", features = [
  "Win32_Foundation",
  "Win32_System_Com",
  "Win32_System_Com_StructuredStorage",
  "Win32_Media_Audio",
  "Win32_Media_MediaFoundation",
  "Win32_Devices_FunctionDiscovery",
  "Win32_UI_Shell_PropertiesSystem",
  "Win32_Graphics_Gdi",
  "Win32_UI_WindowsAndMessaging",
  "Win32_Storage_Xps",
  "Win32_Security",
  "Win32_Security_Authorization",
  "Win32_Security_Cryptography",
  "Win32_Storage_FileSystem",
  "Win32_System_Memory",
  "Win32_System_ProcessStatus",
  "Win32_System_Threading",
  # DXGI Desktop Duplication (display capture backend)
  "Win32_Graphics_Direct3D",
  "Win32_Graphics_Direct3D11",
  "Win32_Graphics_Dxgi",
  "Win32_Graphics_Dxgi_Common",
] }


[patch.crates-io]
wasapi = { path = "../vendor/wasapi" }

#ecolor      = { git = "https://github.com/Duocast/egui_winit-0.31-beta2", branch = "main" }
#emath       = { git = "https://github.com/Duocast/egui_winit-0.31-beta2", branch = "main" }
#epaint      = { git = "https://github.com/Duocast/egui_winit-0.31-beta2", branch = "main" }

#egui        = { git = "https://github.com/Duocast/egui_winit-0.31-beta2", branch = "main" }
#egui-winit  = { git = "https://github.com/Duocast/egui_winit-0.31-beta2", branch = "main" }
#eframe      = { git = "https://github.com/Duocast/egui_winit-0.31-beta2", branch = "main" }

#egui_extras = { git = "https://github.com/Duocast/egui_winit-0.31-beta2", branch = "main" }
#egui_glow   = { git = "https://github.com/Duocast/egui_winit-0.31-beta2", branch = "main" }
#egui-wgpu   = { git = "https://github.com/Duocast/egui_winit-0.31-beta2", branch = "main" }
