[package]
name = "vp-control"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.89"
anyhow = "1.0.102"
thiserror = "2.0.18"
tracing = "0.1.44"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.49", features = ["rt-multi-thread", "macros", "time"] }
uuid = { version = "1.21", features = ["v4", "serde"] }
ulid = { version = "1.2.1", features = ["serde"] }
chrono = { version = "0.4.44", features = ["serde"] }

sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "json"] }
