[package]
name = "vp-gateway"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
bytes = "1.6"
clap = { version = "4.5", features = ["derive", "env"] }
dashmap = "5.5"
prost = "0.13"
rand = "0.8"
rcgen = "0.13"
rustls-pemfile = "2"
serde_json = "1.0"
tokio = { version = "1.37", features = ["rt-multi-thread", "macros", "time", "signal", "sync"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
uuid = { version = "1.10", features = ["v4"] }

quinn = "0.11"
rustls = { version = "0.23", default-features = false, features = ["std", "ring"] }

sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "json", "macros", "migrate"] }

vp-control = { path = "../control" }
vp-media = { path = "../media" }
vp-metrics = { path = "../metrics" }

[build-dependencies]
prost-build = "0.13"
