[package]
name = "vp-gateway"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.102"
async-trait = "0.1.89"
bytes = "1.11.1"
chrono = "0.4.44"
clap = { version = "4.5.60", features = ["derive", "env"] }
dashmap = "6.1"
prost = "0.14.3"
rcgen = "0.14.7"
rustls-pemfile = "2.2"
serde_json = "1.0.149"
http-body-util = "0.1.3"
hyper-util = { version = "0.1.2", features = ["tokio"] }
hyper = { version = "1.8.1", features = ["server", "http1"] }
serde = { version = "1.0.228", features = ["derive"] }
scopeguard = "1.2"
tokio = { version = "1.49", features = ["rt-multi-thread", "macros", "time", "signal", "sync", "fs", "io-util"] }
metrics = "0.24.3"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["fmt", "env-filter"] }
uuid = { version = "1.21", features = ["v4"] }

quinn = "0.11.9"
rustls = { version = "0.23.37", default-features = false, features = ["std", "ring"] }
ring = "0.17.14"
sha2 = "0.10.9"
hex = "0.4.3"
infer = "0.19"

sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "json", "macros", "migrate"] }

vp-control = { path = "../control" }
vp-media = { path = "../media" }
vp-metrics = { path = "../metrics" }
vp-route-hash = { path = "../../shared/route-hash" }
vp-voice = { path = "../../shared/voice" }

[build-dependencies]
prost-build = "0.14.3"

[dev-dependencies]
tokio = { version = "1.49", features = ["test-util"] }
