[package]
name = "vp-media"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
bytes = "1.6"
tokio = { version = "1.37", features = ["rt-multi-thread", "macros", "time", "sync"] }
tracing = "0.1"
uuid = { version = "1.10", features = ["v4"] }

# IMPORTANT: use control IDs directly (no duplicated wrappers)
vp-control = { path = "../control" }
