[package]
name = "vp-metrics"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
tokio = { version = "1.37", features = ["rt-multi-thread", "macros"] }
hyper = { version = "1.5", features = ["server", "http1"] }
hyper-util = { version = "0.1", features = ["tokio"] }
http-body-util = "0.1"
tracing = "0.1"

metrics = "0.24"
metrics-exporter-prometheus = "0.16"
once_cell = "1.19"
