[package]
name = "vp-metrics"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.102"
tokio = { version = "1.49", features = ["rt-multi-thread", "macros"] }
hyper = { version = "1.8.1", features = ["server", "http1"] }
hyper-util = { version = "0.1.2", features = ["tokio"] }
http-body-util = "0.1.3"
tracing = "0.1.44"

metrics = "0.24.3"
metrics-exporter-prometheus = "0.18.1"
once_cell = "1.21.3"
